<resources>
    <string name="app_name">Pokemon Team Maker</string>
    <string name="facebook_application_id" translatable="false">1573390259777879</string>
    <string name="facebook_client_token" translatable="false">0e6419c2796ae0193667d4c1c8145878</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1573390259777879</string>

    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="success">Success</string>
    <string name="team_updated">Team updated</string>
    <string name="login_head">Welcome to the Pokemon Team Maker</string>
    <string name="login_sub_title">Before start making your dream teams we have to ensure your profile</string>
    <string name="login_with_facebook">Sign in with Facebook.</string>
    <string name="login_with_google">Sign in with Google</string>
    <string name="error_title_dialog">Something went wrong…</string>
    <string name="error_default_text_dialog">We could not process the action :( \n Please try again. </string>

    <string name="home_bar_title" formatted="true">Teams</string>
    <string name="type_card_prefix" formatted="true">Type: %s</string>
    <string name="pokemon_team_counter" formatted="true" translatable="false">%d/6</string>
    <string name="number_team_card_prefix" formatted="true" translatable="false">#%d</string>

    <string name="regions">Regions</string>
    <string name="pokemons">Pokemons</string>
    <string name="teams">Teams</string>
    <string name="edit_team">Edit team</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="create_team">Create team</string>
    <string name="empty_message">There is no much to do here…</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="pokemon_added">Pokemon added</string>
    <string name="pokemons_by_team">Only 6 Pokemon by team</string>
    <string name="min_pokemons">Must select 3 Pokemon by team at least.</string>
    <string name="min_pokemons_on_update">Team must have 3 Pokemon at least</string>
    <string name="save_team">Save team</string>
    <string name="enter_name">Enter a name&#58;</string>
    <string name="name">Name</string>
    <string name="team_saved">Team saved</string>
    <string name="warning">Warning</string>
    <string name="delete_confirmation">Do you want to delete this team?</string>
</resources>