<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/pokemon_logo_image_view"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokemon_logo_image_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginHorizontal="22dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="@string/login_head"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/before_start_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="22dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/colorPrimary"
        android:text="@string/login_sub_title"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/before_start_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:icon="@drawable/facebook_logo"
        android:layout_marginTop="30dp"
        android:text="@string/login_with_facebook"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_login_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        app:icon="@drawable/google_icon"
        android:layout_marginTop="30dp"
        android:text="@string/login_with_google"/>

</androidx.constraintlayout.widget.ConstraintLayout>