<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/error_dialog_width"
    android:layout_height="@dimen/error_dialog_height"
    android:layout_gravity="center"
    android:background="@drawable/error_dialog_background">

    <ImageView
        android:id="@+id/error_image_dialog_image_view"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/unknown_pokemon"/>

    <TextView
        android:id="@+id/error_title_dialog_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="11dp"
        android:text="@string/error_title_dialog"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_image_dialog_image_view" />

    <TextView
        android:id="@+id/error_text_dialog_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_title_dialog_text_view"
        android:text="@string/error_default_text_dialog"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_ok_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/error_text_dialog_text_view"
        android:text="@string/ok"/>

</androidx.constraintlayout.widget.ConstraintLayout>